--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,11 @@ include (config.h.in)
 
 set (TARGET_1 users)
 set (TARGET_2 auth)
+set (TARGET_3 userlist)
 
 add_subdirectory (install/pre)
 add_subdirectory (${${PROJECT_NAME}_SOURCE_DIR}/${TARGET_1})
 add_subdirectory (${${PROJECT_NAME}_SOURCE_DIR}/${TARGET_2})
+add_subdirectory (${${PROJECT_NAME}_SOURCE_DIR}/${TARGET_3})
 add_subdirectory (install/files)
 add_subdirectory (install/post)
