--- a/config.h.in
+++ b/config.h.in
@@ -1,9 +1,8 @@
-set ("${PROJECT_NAME}_SOURCE_DIR" src)
-set ("${PROJECT_NAME}_INCLUDE_DIR" include)
-set ("${PROJECT_NAME}_BINARY_DIR"  install/bin)
+set ("${PROJECT_NAME}_SOURCE_DIR" source)
+set ("${PROJECT_NAME}_BINARY_DIR" install/bin)
 
 set (CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/build/CMakeModules)
-set (CMAKE_INCLUDE_PATH ${${PROJECT_NAME}_SOURCE_DIR} ${${PROJECT_NAME}_INCLUDE_DIR})
+set (CMAKE_INCLUDE_PATH ${${PROJECT_NAME}_SOURCE_DIR})
 set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/${${PROJECT_NAME}_BINARY_DIR})
 set (CMAKE_INSTALL_PREFIX /usr)
 set (CMAKE_VERBOSE_MAKEFILE ON)
