--- a/source/libseacl/CMakeLists.txt
+++ b/source/libseacl/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-project(${TARGET_2})
+project(${TARGET_1})
 
 include (CheckCXXCompilerFlag)
 CHECK_CXX_COMPILER_FLAG("-std=c++11" HAS_CXX11)
@@ -9,17 +9,13 @@ endif()
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_definitions (${CMAKE_CXX_FLAGS})
 
-set (Boost_USE_STATIC_LIBS OFF)
-set (Boost_USE_MULTITHREADED ON)
-find_package (Boost COMPONENTS regex REQUIRED)
 find_package (MySQL++ REQUIRED)
 
-set (SRC users.cpp eui48_t.cpp)
+set (SRC acl.cpp)
 
 include_directories (${CMAKE_INCLUDE_PATH}
-                     ${Boost_INCLUDE_DIRS}
                      ${MySQL++_INCLUDE_DIRS})
-add_executable (${PROJECT_NAME} ${SRC})
-target_link_libraries (${PROJECT_NAME} ${TARGET_1} ${Boost_LIBRARIES})
+add_library (${PROJECT_NAME} SHARED ${SRC})
+target_link_libraries (${PROJECT_NAME} ${MySQL++_LIBRARIES})
 install (TARGETS ${PROJECT_NAME}
-         DESTINATION ${INSTALL_PATH})
+         DESTINATION ${LIB_INSTALL_PATH})
