Configuration files moved to '/etc/seacl/'

--- a/config.h.in
+++ b/config.h.in
@@ -12,7 +12,7 @@ set (CMAKE_VERBOSE_MAKEFILE ON)
 
 set (INSTALL_PATH ${CMAKE_INSTALL_PREFIX}/bin/${PROJECT_NAME})
 set (LIB_INSTALL_PATH ${CMAKE_INSTALL_PREFIX}/lib/)
-set (CONFIG_PATH /etc/conf.d)
+set (CONFIG_PATH /etc/${PROJECT_NAME})
 
 if(CMAKE_COMPILER_IS_GNUCXX)
     set (CMAKE_CXX_FLAGS "-O0 -Wall")
