--- a/install/files/CMakeLists.txt
+++ b/install/files/CMakeLists.txt
@@ -1,4 +1,6 @@
-install (FILES       cfg/${PROJECT_NAME}
+install (FILES       cfg/${PROJECT_NAME}.conf
+         DESTINATION ${CONFIG_PATH})
+install (FILES       cfg/mysql.conf
          DESTINATION ${CONFIG_PATH}
          PERMISSIONS OWNER_READ
                      OWNER_WRITE)
